# test-project-cs202

./: .gitignore  CMakeLists.txt  README.md
Include/: Animation.hpp  Application.hpp  Button.hpp  Container.hpp  GameState.hpp  MenuState.hpp  PauseState.hpp  ResourceID.hpp  State.hpp  StateID.hpp  StateStack.hpp  TransitionState.hpp
Source/: Application.cpp  Button.cpp  Container.cpp  GameState.cpp  LevelState.cpp  MenuState.cpp  PauseGame.cpp  PauseState.cpp  State.cpp  StateStack.cpp  TransitionState.cpp  WaitingState.cpp  main.cpp
header/: Animation.h  AudioManagement.h  Block.h  BlockAnimation.h  BlockState.h  Boss.h  Character.h  Coin.h  CoinAnimation.h  DrawEngine.h  GameInfo.h  Item.h  MainMenuState.h  Map.h  Monster.h  MonsterAnimation.h  MovementStrategy.h  ObjectAnimation.h  Projectile.h  State.h  constant.h  loadTiles.h  render.h
header/GameLogic/: Animation.h  AudioManagement.h  Block.h  BlockState.h  Boss.h  Character.h  DrawEngine.h  Map.h  MonsterAnimation.h  MovementStrategy.h  Physics.h  Projectile.h  ProjectileAnimation.h  Sound.h  constant.h  tile.h
header/GameState/: Application.hpp  Container.hpp  GameState.hpp  GuideState.hpp  LevelCompleteState.hpp  LevelManager.hpp  MenuState.hpp  PauseState.hpp  ResourceID.hpp  SceneNode.hpp  State.hpp  StateID.hpp  TextNode.hpp  TransitionState.hpp
header/Include/: Application.hpp  BGNode.hpp  BGObject.hpp  Button.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Component.hpp  Container.hpp  GameOverState.hpp  GameState.hpp  LevelManager.hpp  LevelState.hpp  MenuState.hpp  MusicPlayer.hpp  PauseState.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceID.hpp  SettingState.hpp  SoundPlayer.hpp  State.hpp  StateID.hpp  StateStack.hpp  TransitionState.hpp  Utility.hpp  WaitingState.hpp  WinningState.hpp
resources/: level - Copy.txt  level.txt  save.txt
resources/Level1/: level.txt
resources/Level2/: LV2.txt  level.txt
resources/Level3/: level.txt  test.txt
resources/boss minotaur/: boss_attacking_1.aseprite  boss_attacking_2.aseprite  boss_attacking_3.aseprite  boss_dead_1.aseprite  boss_dead_2.aseprite  boss_dead_3.aseprite  boss_exhausted_1.aseprite  boss_exhausted_2.aseprite  boss_flying_1.aseprite  boss_flying_3.aseprite  boss_shooting_1.aseprite  boss_shooting_2.aseprite
src/: Animation.cpp  AudioManagement.cpp  Block.cpp  BlockState.cpp  Boss.cpp  Character.cpp  Coin.cpp  CoinAnimation.cpp  DrawEngine.cpp  Item.cpp  Map.cpp  Monster.cpp  MonsterAnimation.cpp  MovementStrategy.cpp  Physics.cpp  Projectile.cpp  Sound.cpp  main.cpp  tile.cpp
src/GameLogic/: Animation.cpp  AudioManagement.cpp  Block.cpp  BlockState.cpp  Boss.cpp  Character.cpp  DrawEngine.cpp  Item.cpp  Map.cpp  Monster.cpp  MovementStrategy.cpp  Physics.cpp  Projectile.cpp  ProjectileAnimation.cpp  main.cpp
src/GameState/: Application.cpp  Button.cpp  GameState.cpp  GuideState.cpp  LevelCompleteState.cpp  LevelState.cpp  MenuState.cpp  MusicPlayer.cpp  PauseState.cpp  SettingState.cpp  State.cpp  StateStack.cpp  TextNode.cpp  Utility.cpp  main.cpp
src/SourceMenu/: Animation.cpp  Application.cpp  BGNode.cpp  BGObject.cpp  Button.cpp  Command.cpp  CommandQueue.cpp  Component.cpp  Container.cpp  GameOverState.cpp  GameState.cpp  GuideState.cpp  LevelCompleteState.cpp  LevelManager.cpp  LevelState.cpp  MenuState.cpp  MusicPlayer.cpp  PauseState.cpp  SceneNode.cpp  SettingState.cpp  SoundPlayer.cpp  TransitionState.cpp  WaitingState.cpp  WinningState.cpp
